# keyscope

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  custom-defs.example.yaml  package.json  rustwrap.yaml
.github/workflows/: build.yml  release.yml
https:/drive.google.com/expediente/D/1KXoWKvmzzRRclpb_5palSk5m1dg4uuS2/: view?usp=drivesdk
keyscope/: Cargo.toml
keyscope/examples/: validate.rs
keyscope/src/: config.rs  config.yaml  errors.rs  lib.rs  out.rs  providers.rs
keyscope/src/providers/: mod.rs
keyscope/tests/cmd/: external-config.trycmd  main.trycmd  providers.trycmd  reporter.trycmd  requirements.trycmd  validate.trycmd
keyscope/tests/cmd/external-config.in/: config.yaml
src/: data.rs  defs.yaml  main.rs
tooling/: sync-providers.js
