[package]
name = "keyscope"
version = "1.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "3.0.0-beta.4"
service_policy_kit="0.4.0"
serde="*"
serde_json="*"
serde_derive="*"
serde_yaml="*"
env_logger="*"
anyhow="*"
console="*"
csv="*"

[build-dependencies]
vergen = "*"
anyhow="*"