[package]
name = "keyscope"
version = "1.3.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "3.0.0-beta.4"
service_policy_kit = "0.7.0"
serde = "1.0.153"
serde_json = "1.0.94"
serde_derive = "*"
serde_yaml = "0.9.19"
env_logger = "0.10.0"
anyhow = "1.0.69"
console = "0.15.5"
csv = "1.2.1"

[build-dependencies]
vergen = "*"
anyhow = "*"
