[package]
name = "keyscope"
version = "1.4.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# CLI
clap = { version = "4.5.4", features = ["derive"], optional = true }

# Logger
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
], optional = true }
service_policy_kit = { git = "https://github.com/SpectralOps/service-policy-kit", rev = "57543eb" }
serde = { version = "1.0.200" }
serde_derive = "1.0.200"
serde_yaml = { version = "0.9.34" }
serde_variant = { version = "0.1.3" }
lazy_static = { version = "1.4.0" }
thiserror = { version = "1.0.59" }
anyhow = { version = "1.0.82" }
console = { version = "0.15.8", optional = true }

[dev-dependencies]
trycmd = { version = "0.15.1" }

[features]
default = ["cli"]
# list optionals here:
cli = ["dep:clap", "dep:tracing-subscriber", "dep:console"]

[[bin]]
name = "keyscope"
required-features = ["cli"]
